# mindy

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
src/mindy/: mindy.py  mindy_tui.py
