[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mindy"
version = "0.0.0"
authors = [
    {name = "Thomas Svensson", email = "thomas@tsvenson.com"},
]
description = "A shell UI based on Textual"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["organizer", "console", "UI", "TUI"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "textual",
]

[project.urls]
homepage = "https://github.com/ShazbotLabs/mindy"
