[metadata]
name = mindy
version = dev
url = https://github.com/ShazbotLabs/mindy
author = Thomas Svenson
author_email = thomas@tsvenson.com
license = MIT
description = A shell UI based on Prompt Toolkit.
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = mindy
