[metadata]
name = mindy
version = dev
url = https://github.com/ShazbotLabs/mindy
author = Thomas Svensson
author_email = thomas@tsvenson.com
license = MIT
description = A shell UI based on Prompt Toolkit.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages = mindy
